Basic Ping/OBS separation, locale changes

--- a/UI/data/locale/en-GB.ini
+++ b/UI/data/locale/en-GB.ini
@@ -1,5 +1,5 @@
 Language="English (UK)"
-AlreadyRunning.Text="OBS is already running! Unless you meant to do this, please shut down any existing instances of OBS before trying to run a new instance. If you have OBS set to minimise to the system tray, please check to see if it's still running there."
+AlreadyRunning.Text="Ping Studio is already running! Unless you meant to do this, please shut down any existing instances of Ping Studio before trying to run a new instance. If you have Ping Studio set to minimise to the system tray, please check to see if it's still running there."
 BrowserPanelInit.Title="Initialising Browser..."
 BrowserPanelInit.Text="Initialising browser, please wait..."
 Basic.AutoConfig.StartPage.PrioritizeStreaming="Optimise for streaming, recording is secondary"
@@ -16,7 +16,7 @@ Output.StreamEncodeError.Msg.LastError="An encoding error occurred while streami
 Output.RecordError.EncodeErrorMsg.LastError="An encoding error occurred while recording:\n\n%1"
 Output.BroadcastStartFailed="Failed to start brodcast"
 LogReturnDialog.AnalyzeURL="Analyse"
-Remux.HelpText="Drop files in this window to remux, or select an empty \"OBS Recording\" cell to browse for a file."
+Remux.HelpText="Drop files in this window to remux, or select an empty \"Ping Studio Recording\" cell to browse for a file."
 MissingFiles.NumFound="Located $1 of $2"
 MissingFiles.Search="Search Folder..."
 MissingFiles.SelectFile="Select File..."
@@ -25,7 +25,7 @@ MissingFiles.Replaced="Recreated"
 MissingFiles.Cleared="Removed"
 MissingFiles.Found="Detected"
 MissingFiles.AutoSearch="Additional files detected"
-MissingFiles.AutoSearchText="OBS detected more matches for disappeared files in that folder. Do you fancy adding them?"
+MissingFiles.AutoSearchText="Ping Studio detected more matches for disappeared files in that folder. Do you fancy adding them?"
 Basic.PropertiesWindow.SelectColor="Select colour"
 Basic.TransformWindow.Alignment.TopCenter="Top Centre"
 Basic.TransformWindow.Alignment.CenterLeft="Centre Left"
