--- a/UI/data/locale/en-US.ini
+++ b/UI/data/locale/en-US.ini
@@ -103,15 +103,15 @@ OpenFile="Open file"
 AddValue="Add %1"
 
 # warning if program already open
-AlreadyRunning.Title="OBS is already running"
-AlreadyRunning.Text="OBS is already running! Unless you meant to do this, please shut down any existing instances of OBS before trying to run a new instance. If you have OBS set to minimize to the system tray, please check to see if it's still running there."
+AlreadyRunning.Title="Ping Studio is already running"
+AlreadyRunning.Text="Ping Studio is already running! Unless you meant to do this, please shut down any existing instances of Ping Studio before trying to run a new instance. If you have Ping Studio set to minimize to the system tray, please check to see if it's still running there."
 AlreadyRunning.LaunchAnyway="Launch Anyway"
 
 ChromeOS.Title="Unsupported Platform"
-ChromeOS.Text="OBS appears to be running inside a Chrome OS container. This platform is unsupported"
+ChromeOS.Text="Ping Studio appears to be running inside a Chrome OS container. This platform is unsupported"
 
 Wine.Title="Wine detected"
-Wine.Text="Running OBS in Wine is unsupported, and many features such as capture or device sources will not work or only in limited capacity.<br><br>It is recommended to run a native version of OBS instead, for example <a href='https://flathub.org/apps/details/com.obsproject.Studio'>our Flatpak version</a> or your operating system's packages."
+Wine.Text="Running Ping Studio in Wine is unsupported, and many features such as capture or device sources will not work or only in limited capacity."
 
 # warning when closing docks. it's frustrating that we actually need this.
 DockCloseWarning.Title="Closing Dockable Window"
@@ -139,7 +139,7 @@ Auth.StreamInfo="Stream Information"
 TwitchAuth.Stats="Twitch Stats"
 TwitchAuth.Feed="Twitch Activity Feed"
 TwitchAuth.TwoFactorFail.Title="Could not query stream key"
-TwitchAuth.TwoFactorFail.Text="OBS was unable to connect to your Twitch account. Please make sure two-factor authentication is set up in your <a href='https://www.twitch.tv/settings/security'>Twitch security settings</a> as this is required to stream."
+TwitchAuth.TwoFactorFail.Text="Ping Studio was unable to connect to your Twitch account. Please make sure two-factor authentication is set up in your <a href='https://www.twitch.tv/settings/security'>Twitch security settings</a> as this is required to stream."
 RestreamAuth.Channels="Restream Channels"
 
 # copy filters
@@ -348,11 +348,11 @@ ConfirmStopRecord.Text="Are you sure you want to stop recording?"
 
 # confirm bandwidth test dialog box
 ConfirmBWTest.Title="Start Bandwidth Test?"
-ConfirmBWTest.Text="You have OBS configured in bandwidth test mode. This mode allows for network testing without your channel going live. Once you are done testing, you will need to disable it in order for viewers to be able to see your stream.\n\nDo you want to continue?"
+ConfirmBWTest.Text="You have Ping Studio configured in bandwidth test mode. This mode allows for network testing without your channel going live. Once you are done testing, you will need to disable it in order for viewers to be able to see your stream.\n\nDo you want to continue?"
 
 # confirm exit dialog box
-ConfirmExit.Title="Exit OBS?"
-ConfirmExit.Text="OBS is currently active. All streams/recordings will be shut down. Are you sure you wish to exit?"
+ConfirmExit.Title="Exit Ping Studio?"
+ConfirmExit.Text="Ping Studio is currently active. All streams/recordings will be shut down. Are you sure you wish to exit?"
 
 # confirm delete dialog box
 ConfirmRemove.Title="Confirm Remove"
@@ -413,29 +413,29 @@ LogReturnDialog.AnalyzeURL="Analyze"
 LogReturnDialog.ErrorUploadingLog="Error uploading log file"
 
 # remux dialog
-Remux.SourceFile="OBS Recording"
+Remux.SourceFile="Ping Studio Recording"
 Remux.TargetFile="Target File"
 Remux.Remux="Remux"
 Remux.Stop="Stop Remuxing"
 Remux.ClearFinished="Clear Finished Items"
 Remux.ClearAll="Clear All Items"
-Remux.OBSRecording="OBS Recording"
+Remux.OBSRecording="Ping Studio Recording"
 Remux.FinishedTitle="Remuxing finished"
 Remux.Finished="Recording remuxed"
 Remux.FinishedError="Recording remuxed, but the file may be incomplete"
-Remux.SelectRecording="Select OBS Recording..."
+Remux.SelectRecording="Select Ping Studio Recording..."
 Remux.SelectTarget="Select target file..."
 Remux.FileExistsTitle="Target files exist"
 Remux.FileExists="The following target files already exist. Do you want to replace them?"
 Remux.ExitUnfinishedTitle="Remuxing in progress"
 Remux.ExitUnfinished="Remuxing is not finished, stopping now may render the target file unusable.\nAre you sure you want to stop remuxing?"
-Remux.HelpText="Drop files in this window to remux, or select an empty \"OBS Recording\" cell to browse for a file."
+Remux.HelpText="Drop files in this window to remux, or select an empty \"Ping Studio Recording\" cell to browse for a file."
 
 # missing file dialog
 MissingFiles="Missing Files"
 MissingFiles.MissingFile="Missing File"
 MissingFiles.NewFile="New File"
-MissingFiles.HelpText="Some files are missing since you last used OBS."
+MissingFiles.HelpText="Some files are missing since you last used Ping Studio."
 MissingFiles.Clear="<cleared>"
 MissingFiles.NumFound="Found $1 of $2"
 MissingFiles.Search="Search Directory..."
@@ -447,7 +447,7 @@ MissingFiles.Replaced="Replaced"
 MissingFiles.Cleared="Cleared"
 MissingFiles.Found="Found"
 MissingFiles.AutoSearch="Additional file matches found"
-MissingFiles.AutoSearchText="OBS has found additional matches for missing files in that directory. Would you like to add them?"
+MissingFiles.AutoSearchText="Ping Studio has found additional matches for missing files in that directory. Would you like to add them?"
 MissingFiles.NoMissing.Title="Missing Files Check"
 MissingFiles.NoMissing.Text="No files appear to be missing."
 
@@ -787,9 +787,9 @@ Basic.Settings.General.Theme="Theme"
 Basic.Settings.General.Language="Language"
 Basic.Settings.General.EnableAutoUpdates="Automatically check for updates on startup"
 Basic.Settings.General.OpenStatsOnStartup="Open stats dialog on startup"
-Basic.Settings.General.HideOBSWindowsFromCapture="Hide OBS windows from screen capture"
-Basic.Settings.General.HideOBSWindowsFromCapture.Tooltip="This setting will hide all non-projector OBS Studio windows from being captured by OBS and affects \nother applications, such as conferencing, screen sharing, remote support, screenshots, and other capture software."
-Basic.Settings.General.HideOBSWindowsFromCapture.Message="Enabling this option hides all non-projector OBS Studio windows from being captured by OBS and affects other applications, such as conferencing, screen sharing, remote support, screenshots, and other capture software."
+Basic.Settings.General.HideOBSWindowsFromCapture="Hide Ping Studio windows from screen capture"
+Basic.Settings.General.HideOBSWindowsFromCapture.Tooltip="This setting will hide all non-projector Ping Studio windows from being captured by Ping Studio and affects \nother applications, such as conferencing, screen sharing, remote support, screenshots, and other capture software."
+Basic.Settings.General.HideOBSWindowsFromCapture.Message="Enabling this option hides all non-projector Ping Studio windows from being captured by Ping Studio and affects other applications, such as conferencing, screen sharing, remote support, screenshots, and other capture software."
 Basic.Settings.General.WarnBeforeStartingStream="Show confirmation dialog when starting streams"
 Basic.Settings.General.WarnBeforeStoppingStream="Show confirmation dialog when stopping streams"
 Basic.Settings.General.WarnBeforeStoppingRecord="Show confirmation dialog when stopping recording"
@@ -1015,7 +1015,7 @@ Basic.Settings.Audio.PeakMeterType="Peak Meter Type"
 Basic.Settings.Audio.PeakMeterType.SamplePeak="Sample Peak"
 Basic.Settings.Audio.PeakMeterType.TruePeak="True Peak (Higher CPU usage)"
 Basic.Settings.Audio.MultiChannelWarning.Enabled="WARNING: Surround sound audio is enabled."
-Basic.Settings.Audio.MultichannelWarning="If streaming, check to see if your streaming service supports both surround sound ingest and surround sound playback. Facebook 360 Live is one example where surround sound is fully supported. Although Facebook Live and YouTube Live both accept surround ingest, Facebook Live downmixes to stereo, and YouTube Live plays only two channels.\n\nOBS audio filters are compatible with surround sound, though VST plugin support isn't guaranteed."
+Basic.Settings.Audio.MultichannelWarning="If streaming, check to see if your streaming service supports both surround sound ingest and surround sound playback. Facebook 360 Live is one example where surround sound is fully supported. Although Facebook Live and YouTube Live both accept surround ingest, Facebook Live downmixes to stereo, and YouTube Live plays only two channels.\n\nPing Studio audio filters are compatible with surround sound, though VST plugin support isn't guaranteed."
 Basic.Settings.Audio.MultichannelWarning.Title="Enable surround sound audio?"
 Basic.Settings.Audio.MultichannelWarning.Confirm="Are you sure you want to enable surround sound audio?"
 Basic.Settings.Audio.Devices="Global Audio Devices"
@@ -1184,7 +1184,7 @@ BrowserSource.EnableHardwareAcceleration="Enable Browser Source Hardware Acceler
 
 # about dialog
 About="About"
-About.Info="OBS Studio is a free and open source video recording and live streaming software."
+About.Info="Ping Studio is a free and open source video recording and virtual camera software."
 About.Donate="Make a Contribution"
 About.GetInvolved="Get Involved"
 About.Authors="Authors"
@@ -1193,7 +1193,7 @@ About.Contribute="Support the OBS Project"
 
 # Drag-drop URL
 AddUrl.Title="Add Source via URL"
-AddUrl.Text="You have dragged a URL into OBS. This will automatically add the link as a source. Continue?"
+AddUrl.Text="You have dragged a URL into Ping Studio. This will automatically add the link as a source. Continue?"
 AddUrl.Text.Url="URL: %1"
 
 # Dynamic output size
@@ -1207,22 +1207,22 @@ PreviewTransition="Preview Transition"
 Importer="Scene Collection Importer"
 Importer.SelectCollection="Select a Scene Collection"
 Importer.Collection="Scene Collection"
-Importer.HelpText="Add files to this window to import collections from OBS or other supported programs."
+Importer.HelpText="Add files to this window to import collections from Ping Studio or other supported programs."
 Importer.Path="Collection Path"
 Importer.Program="Detected Application"
 Importer.AutomaticCollectionPrompt="Automatically Search for Scene Collections"
-Importer.AutomaticCollectionText="OBS can automatically find importable scene collections from supported third-party programs. Would you like OBS to automatically find collections for you?\n\nYou can change this later in Settings > General > Importers."
+Importer.AutomaticCollectionText="Ping Studio can automatically find importable scene collections from supported third-party programs. Would you like Ping Studio to automatically find collections for you?\n\nYou can change this later in Settings > General > Importers."
 
 # Importers
-OBSStudio="OBS Studio"
-OBSClassic="OBS Classic"
+OBSStudio="Ping Studio"
+OBSClassic="Ping Studio Classic"
 Streamlabs="Streamlabs"
 XSplitBroadcaster="XSplit Broadcaster"
 
-# OBS restart
+# Ping Studio restart
 Restart="Restart"
-NeedsRestart="OBS Studio needs to be restarted. Do you want to restart now?"
-LoadProfileNeedsRestart="Profile contains settings that require restarting OBS:\n%1\n\nDo you want to restart OBS for these settings to take effect?"
+NeedsRestart="Ping Studio Studio needs to be restarted. Do you want to restart now?"
+LoadProfileNeedsRestart="Profile contains settings that require restarting Ping Studio:\n%1\n\nDo you want to restart Ping Studio for these settings to take effect?"
 
 # Context Bar
 ContextBar.NoSelectedSource="No source selected"
