Adjustments to help menu/about page

--- a/UI/data/locale/ja-JP.ini
+++ b/UI/data/locale/ja-JP.ini
@@ -946,7 +946,7 @@ About.Donate="貢献する"
 About.GetInvolved="参加する"
 About.Authors="作者"
 About.License="ライセンス"
-About.Contribute="Ping Studio プロジェクトを支援する"
+About.Contribute="Ping StudioはOBSプロジェクトのおかげでつくれます。ぜひOBSプロジェクトを支援してください："
 AddUrl.Title="URL経由でソースを追加"
 AddUrl.Text="URLをPing Studioにドラッグしました。これによりリンクがソースとして自動的に追加されます。続行しますか？"
 ResizeOutputSizeOfSource="出力サイズ変更 (ソースサイズ)"
