--- a/UI/data/locale/en-US.ini
+++ b/UI/data/locale/en-US.ini
@@ -1189,7 +1189,7 @@ About.Donate="Make a Contribution"
 About.GetInvolved="Get Involved"
 About.Authors="Authors"
 About.License="License"
-About.Contribute="Support the OBS Project"
+About.Contribute="Ping Studio was made possible by the OBS Project. Please consider supporting the OBS Project:"
 
 # Drag-drop URL
 AddUrl.Title="Add Source via URL"
